<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fenxi"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F6F1F1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/back"
                android:id="@+id/back2"
                >

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:text="@string/fenxi"
                android:layout_weight="2"
                android:textColor="@color/style"
                android:paddingLeft="100dp"
                >
            </TextView>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/no"
                >

            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/backgurand"
            android:layout_weight="2"
            android:layout_marginHorizontal="5dp"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/sma2"
                >

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pq"
                android:textSize="25dp"
                android:textColor="@color/style"
                android:paddingLeft="30sp"
                >

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginHorizontal="5dp"

            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/backgurand"
                android:layout_weight="1"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shu"
                    android:textSize="20sp"
                    android:textColor="@color/style"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:gravity="left"
                    android:drawableLeft="@mipmap/book2"
                    >
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/good"
                    android:padding="10dp"
                    android:textColor="#000000"

                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/backgurand"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yu"
                    android:gravity="left"
                    android:paddingLeft="20dp"
                    android:drawableLeft="@mipmap/book2"
                    android:textSize="20sp"
                    android:textColor="@color/style"
                    android:paddingRight="20dp"
                    >
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bad"
                    android:padding="3dp"
                    android:textColor="#000000"

                    >
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginHorizontal="5dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/backgurand"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ying"
                    android:drawableLeft="@mipmap/book2"
                    android:paddingLeft="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/style"
                    android:gravity="left"
                    android:paddingRight="20dp"
                    >
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bad"
                    android:padding="3dp"
                    android:textColor="#000000"

                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/backgurand"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ji"
                    android:paddingLeft="20dp"
                    android:textSize="20sp"
                    android:drawableLeft="@mipmap/book2"
                    android:textColor="@color/style"
                    android:gravity="left"
                    android:paddingRight="20dp"
                    >
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"
                    android:padding="10dp"
                    android:textColor="#000000"

                    >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>