<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:background="@drawable/head2"
                >
            </ImageView>
            <Button
                android:id="@+id/start1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="生成报告"
                android:textSize="50sp"
                android:background="@color/no"
                tools:ignore="InvalidId"
                >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/backgurand"
            android:layout_marginHorizontal="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:text="@string/shu"
                android:textColor="#000000"
                android:textSize="30sp"
                android:paddingLeft="10dp"

                >
            </TextView>
            <EditText
                android:id="@+id/mathgrades1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:textSize="30sp"
                android:hint="@string/notice1"
                android:inputType="number"
                >
            </EditText>
            <EditText
                android:id="@+id/mathgrades2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:textSize="30sp"
                android:hint="@string/notice2"
                android:inputType="number"

                >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/backgurand"
            android:layout_marginHorizontal="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:text="@string/yu"
                android:textColor="#000000"
                android:textSize="30sp"
                android:paddingLeft="10dp"

                >
            </TextView>
            <EditText
                android:id="@+id/chinese1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:textSize="30sp"
                android:hint="@string/notice1"
                android:inputType="number"

                >
            </EditText>
            <EditText
                android:id="@+id/chinese2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:textSize="30sp"
                android:hint="@string/notice2"
                android:inputType="number"
                >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/backgurand"
            android:layout_marginHorizontal="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:text="@string/ying"
                android:textColor="#000000"
                android:textSize="30sp"
                android:paddingLeft="10dp"

                >
            </TextView>
            <EditText
                android:id="@+id/english1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:textSize="30sp"
                android:hint="@string/notice1"
                android:inputType="number"
                >
            </EditText>
            <EditText
                android:id="@+id/english2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:textSize="30sp"
                android:hint="@string/notice2"
                android:inputType="number"
                >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/backgurand"
            android:layout_marginHorizontal="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:text="@string/ji"
                android:textColor="#000000"
                android:textSize="30sp"
                android:paddingLeft="10dp"

                >
            </TextView>
            <EditText
                android:id="@+id/computer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:textSize="30sp"
                android:hint="@string/notice1"
                android:inputType="number"
                >
            </EditText>
            <EditText
                android:id="@+id/computer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_underline"
                android:textSize="30sp"
                android:hint="@string/notice2"
                android:inputType="number"
                >
            </EditText>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/di2"

            >

        </ImageView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>