<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pingu"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <Button
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:id="@+id/back"
                android:background="@drawable/back"
                >
            </Button>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pinggu"
                android:textSize="45dp"
                android:layout_weight="1"
                android:textColor="@color/style"
                android:gravity="center"
                >

            </TextView>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/next"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="50dp"
                    android:textColor="@color/style"
                    android:background="@drawable/biao"
                    android:layout_weight="1"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20sp"
                    >
                </Button>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="8"
            android:layout_marginHorizontal="5dp"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/backgurand"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/shu"
                        android:textSize="20dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="5dp"
                        android:textColor="@color/style"
                        >
                    </TextView>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/math1"
                            android:textSize="20sp"
                            android:paddingLeft="12dp"
                            >
                        </TextView>

                        <TextView
                            android:id="@+id/math2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="12dp"
                            android:textSize="20sp"
                            >

                        </TextView>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="A"
                    android:layout_weight="1"
                    android:textSize="40dp"
                    android:textColor="#000000"
                    android:gravity="right"
                    android:paddingRight="100dp"
                    >

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/backgurand"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/yu"
                        android:textSize="20dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="5dp"
                        android:textColor="@color/style"
                        >
                    </TextView>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/chinese1"
                            android:textSize="20sp"
                            android:paddingLeft="12dp"
                            >
                        </TextView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/chinese2"
                            android:textSize="20sp"
                            android:paddingLeft="12dp"
                            >

                        </TextView>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="A"
                    android:layout_weight="1"
                    android:textSize="40dp"
                    android:textColor="#000000"
                    android:gravity="right"
                    android:paddingRight="100dp"
                    >

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@drawable/backgurand"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/ying"
                        android:textSize="20dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="5dp"
                        android:textColor="@color/style"
                        >
                    </TextView>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/english1"
                            android:textSize="20sp"
                            android:paddingLeft="12dp"
                            >
                        </TextView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/english2"
                            android:textSize="20sp"
                            android:paddingLeft="12dp"
                            >

                        </TextView>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="A"
                    android:layout_weight="1"
                    android:textSize="40dp"
                    android:textColor="#000000"
                    android:gravity="right"
                    android:paddingRight="100dp"
                    >

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/backgurand"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/ji"
                        android:textSize="20dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="5dp"
                        android:textColor="@color/style"
                        >
                    </TextView>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/computer1"
                            android:textSize="20sp"
                            android:paddingLeft="12dp"
                            >
                        </TextView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/computer2"
                            android:textSize="20sp"
                            android:paddingLeft="12dp"
                            >

                        </TextView>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="A"
                    android:layout_weight="1"
                    android:textSize="40dp"
                    android:textColor="#000000"
                    android:gravity="right"
                    android:paddingRight="100dp"
                    >

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:background="@drawable/backgurand"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="@color/style"
                        android:textSize="45dp"
                        android:text="@string/zong"
                        android:layout_weight="1"
                        >
                    </TextView>
                    <TextView
                        android:id="@+id/all"
                        android:layout_width="200dp"
                        android:layout_height="170dp"
                        android:textColor="@color/style"
                        android:textSize="45dp"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:background="@drawable/bb"
                        >

                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/zhu"
                            >

                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="稳定性"
                            android:textColor="@color/style"
                            android:padding="10dp"
                            android:textSize="20dp"
                            android:layout_weight="1"
                            >
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/zhu"
                            >

                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="综合评级"
                            android:textColor="@color/style"
                            android:padding="10dp"
                            android:textSize="20dp"
                            android:layout_weight="1"
                            >
                        </TextView>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>